# print-backend

./: .gitignore  Dockerfile  Dockerfile.prod  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: permissions.py  serializers.py  urls.py  views.py
api/services/: label_service.py
api/static/certs/: digital-certificate.txt
api/utils/: admin.py  format.py  styles.py
core/: settings.py  urls.py  views.py
core/utils/: notifications.py  redirect.py
deploy/: entrypoint.sh
main/: admin.py  apps.py  models.py
main/management/commands/: import_contractor.py  import_products.py  normalize_cities.py  populate_products_org_standarts.py  update_products_caption.py
main/migrations/: 0001_initial.py  0002_historicalproduct_template_product_template.py  0003_baseinfo_alter_historicalproduct_options_and_more.py  0004_alter_historicaltemplate_elements_and_more.py  0005_historicalbaseinfo_historicalcontractorcategory.py  0006_alter_historicalproduct_calories_and_more.py  0007_alter_productorgstandart_product.py  0008_baseinfo_site_url_historicalbaseinfo_site_url_and_more.py  0009_alter_historicalproduct_caption_and_more.py  0010_contractortemplate_producttemplate_and_more.py  0011_migrate_templates.py  0012_remove_contractor_template_and_more.py  0013_alter_contractortemplate_options_and_more.py  0014_historicalproduct_status_product_status.py  0015_alter_historicalproduct_status_alter_product_status.py
main/static/js/: contractor_template_preview.js  generate_label.js  product_template_preview.js  (+1 more)
main/utils/: admin.py  fonts.py
(+1 files in other folders)
